# avro-lsp

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  gitlab-ci-template.yml  justfile  release.toml  test_multifile.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: README.md  e2e_lint_bench.rs  handlers_bench.rs  integration_bench.rs  parser_bench.rs  validator_bench.rs  workspace_bench.rs
examples/: DEMO.md  README.md  comprehensive_deeply_nested.avsc  demo_product.avsc  print_ast.rs
src/: cli.rs  lib.rs  main.rs  server.rs  state.rs  workspace.rs
src/handlers/: code_actions.rs  completion.rs  definition.rs  diagnostics.rs  document_highlight.rs  folding_ranges.rs  formatting.rs  hover.rs  inlay_hints.rs  mod.rs  rename.rs  semantic_tokens.rs  symbols.rs  workspace_symbols.rs
src/handlers/code_actions/: builder.rs  helpers.rs  mod.rs  refactoring.rs
src/handlers/diagnostics/: error_conversion.rs  json_position.rs  mod.rs  position_finder.rs  tests.rs  text_search.rs  warning_conversion.rs
src/handlers/rename/: local_references.rs  local_rename.rs  mod.rs  node_matcher.rs  tests.rs  validation.rs  workspace_operations.rs
src/schema/: error.rs  json_parser.rs  mod.rs  parser.rs  types.rs  validator.rs  warning.rs
src/schema/validator/: complex_validators.rs  default_validators.rs  logical_type_validators.rs  mod.rs  name_validators.rs  tests.rs
tests/: semantic_token_comparison.rs  token_capture_test.rs
tests/fixtures/formatting/: unformatted.avsc
tests/fixtures/invalid/: bad_name.avsc  bad_namespace.avsc  decimal_bytes_no_precision.avsc  decimal_scale_exceeds_precision.avsc  duplicate_fields.avsc  nested_union.avsc  (+21 more)
vscode-avro-lsp/: .gitignore  .vscodeignore  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-avro-lsp/src/: extension.ts
vscode-avro-lsp/syntaxes/: avsc.tmLanguage.json
(+25 files in other folders)
