[package]
name = "avro-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
async-lsp = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
tower = "0.5"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nom = "7.1"
nom_locate = "4.2"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.0"

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
