[package]
name = "avro-lsp"
version = "0.1.21"
edition = "2024"
license = "MIT"

[dependencies]
async-lsp = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
tower = "0.5"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nom = "7.1"
nom_locate = "4.2"
once_cell = "1.21"
indexmap = "2.13"
bitflags = "2.11"
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.6", features = ["fancy"] }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.25"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "validator_bench"
harness = false

[[bench]]
name = "handlers_bench"
harness = false

[[bench]]
name = "workspace_bench"
harness = false

[[bench]]
name = "integration_bench"
harness = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
